# StickDriftVr

./: .gitmodules  CMakeLists.txt  README.md  build.sh
simplecontroller/resources/: driver.vrresources
simplecontroller/resources/input/: legacy_binding_mycontroller.json.bak  mycontroller_legacy.json  mycontroller_profile.json
src/: connect_controller.cpp  connect_controller.h  controller_device_driver.cpp  controller_device_driver.h  device_factory.cpp  device_provider.cpp  device_provider.h  imu_decode.h  joycon_read.cpp  joycon_read.h  quaternion.h
